--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 LABEL maintainer="limoe"
-ARG QL_URL=https://github.com/Zy143L/qinglong.git
+ARG QL_URL=https://github.com/drew0531/qinglong.git
 ARG QL_BRANCH=master
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
     LANG=zh_CN.UTF-8 \
