--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:lts-alpine
-LABEL maintainer="limoe"
+LABEL maintainer="drew0531"
 ARG QL_URL=https://github.com/drew0531/ql.git
 ARG QL_BRANCH=master
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
